# huijiu-prototype

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
docs/: data-contract.md  runbook.md
src/hardware/calib/: d455_intrinsic.json  handeye_result.json  handeye_samples.json
src/huijiu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/huijiu/apps/: integrated_safe_loop_demo.py
src/huijiu/apps/mybot/: coords_smoke_test.py  ik_demo.py  mycobot_basic_demo.py  mycobot_drag_teach_capture.py  mycobot_goto_hukou_pose.py  mycobot_hukou_follow_demo.py  urdf_inspect.py
src/huijiu/apps/sensors/: read_distance_demo.py  read_temp_demo.py
src/huijiu/apps/tools/: gen_aruco_marker.py
src/huijiu/apps/vison/: aruco_debug_demo.py  aruco_go_demo.py  aruco_go_demo_ik.py  aruco_pose_demo.py  calib_hukou_pixel.py  d455_preview_demo.py  hand_hukou_dem.py  hand_hukou_demo-bothhand.py  handeye_quick_check.py
src/huijiu/core/: config.py  orchestrator.py
src/huijiu/robot/: mycobot280_m5.py
src/huijiu/safety/: rules.py  state.py
src/huijiu/sensors/: manager.py  mlx90614.py  vl53l0x.py
src/huijiu/sensors/backends/: base.py  mcp2221_easy.py
src/huijiu/vision/: aruco_utils.py  calib_chessboard.py  d455.py  handeye_collect_samples.py  handeye_solve.py  hands.py
tools/VL53L0X/: VL53L0X激光测距模块2023-06.doc
