[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huijiu"
version = "0.1.0"
description = "Huijiu prototype: sensing + vision + robotics integration with delivery artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Jingjing Qin" }]

# 最小可运行依赖（跨平台、不要把平台/硬件强耦合的塞进来）
dependencies = [
  "numpy>=1.26,<2.0",
  "scipy>=1.10,<2.0",
  "networkx>=2.8,<4.0",
  "packaging>=23.0,<26.0",
  "python-dateutil>=2.8,<3.0",
  "pyyaml>=6.0,<7.0",

  # 轻量可视化/调试（可删，但建议留）
  "matplotlib>=3.8,<4.0",
  "pillow>=10.0,<13.0",
]

[project.optional-dependencies]
# 视觉栈：opencv/mediapipe/realsense
vision = [
  "opencv-contrib-python>=4.8,<5.0",
  "mediapipe>=0.10,<0.11",

  # RealSense Python wrapper 平台强相关：先按 Windows 锁定
  "pyrealsense2==2.56.5.9235; platform_system=='Windows'",
]

# 机械臂/机器人学：mycobot + IK/URDF + 渲染
robot = [
  "pymycobot>=4.0,<5.0",
  "ikpy>=3.4,<4.0",
  "urdfpy==0.0.22",
  "trimesh>=4.0,<5.0",
  "pyrender>=0.1,<0.2",
  "PyOpenGL>=3.1,<4.0",
  "pyglet>=2.0,<3.0",
  "pycollada>=0.6,<1.0",
]

# 传感器/串口/USB桥接/HID
hardware = [
  "smbus2>=0.5,<1.0",
  "pyserial>=3.5,<4.0",
  "EasyMCP2221>=1.8,<2.0",
  "hidapi>=0.14,<0.15",
]

# 开发工具（可选）
dev = [
  "pytest>=7.0,<9.0",
  "ruff>=0.4,<1.0",
  "black>=24.0,<26.0",
]

# 一把梭（可选）
all = [
  "huijiu[vision,robot,hardware,dev]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# 非 python 资源（比如 src/hardware/*、标定文件、urdf）
# 建议先显式打包。否则 pip 安装后可能找不到这些文件。
[tool.setuptools.package-data]
huijiu = ["**/*.json", "**/*.yaml", "**/*.yml", "**/*.urdf", "**/*.txt", "**/*.csv"]
